@@ -1,3 +1,11 @@
+24 April 2007
++ Fixed folder permissioning
++ Fixed problem with thumbnails for long or tall images
++ If a folder's directory is already created, fc doesn't try to create
+  a new one, preventing an error message and preventing a bad key.
++ Thumbnail size has is set in a define
++ Updated : conf/config.php
+
 19 April 2007
 + Added two stand-alone functions to check whether an image or
   document is allowed. allowImageType & allowDocumentType
